# Mojito

./: .gitignore  .pdm-python  404.html  LICENSE  README.md  about.md  index.html  objects.inv  pyproject.toml  requirements-docs.txt  requirements-tests.txt  requirements.txt  sitemap.xml
.github/workflows/: build-docs.yml  pypi-publish.yml  python-publish.yml
auth/: index.html
configuration/: index.html
docs/: mkdocs.yml
docs/docs/: auth.md  configuration.md  features.md  forms.md  getting_started.md  index.md  message_flashing.md  routing.md  templates.md
features/: index.html
forms/: index.html
getting_started/: index.html
message_flashing/: index.html
mojito/: __init__.py  app.py  auth.py  config.py  form.py  forms.py  globals.py  helpers.py  message_flash.py  routing.py  templating.py
mojito/components/: main.py
mojito/middleware/: sessions.py
mojito/mojito/: main.py
mojito/tests/: app.py  app_routes.py
routing/: index.html
scripts/: format.sh  lint.sh
tests/: app.py  app_routes.py  auth.py  main.py  test_auth.py  test_form.py  test_globals.py  test_message_flash.py  test_routing.py  test_templates.py
tests/components/: test_components.py  test_template.html
tests/templates/: number.jinja
