[project]
name = "mojito-web"
dynamic = ["version"]
description = "Lightweight ASGI framework based on Starlette."
authors = [{ name = "Austin Bauman", email = "abauman97@protonmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "starlette>=0.40.0,<0.42.0",
    "jinja2 >=3.1.0",
    "itsdangerous~=2.2",
    "python-multipart>=0.0.9",
]

[project.urls]
Homepage = "https://github.com/abauman97/Mojito"
Documentation = "https://abauman97.github.io/Mojito/"
Repository = "https://github.com/abauman97/Mojito.git"
Issues = "https://github.com/abauman97/Mojito/issues"
# Changelog = "https://github.com/abauman97/Mojito/blob/main/CHANGELOG.md"

[project.optional-dependencies]
standard = ["uvicorn[standard]~=0.12", "httpx>=0.23.0", "pydantic>2.1.0"]
all = ["uvicorn[standard]~=0.12", "httpx>=0.23.0", "pydantic>2.1.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source = "file", path = "mojito/__init__.py" }
distribution = true

[tool.pdm.build]
includes = ["mojito/"]

[tool.pdm.dev-dependencies]
test = ["pytest>=8.3.2"]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = ["I", "UP"]
